dhall/tests/type-errors/unit/OperatorListConcatenateListsNotMatch.txt
Type error: error: BinOpTypeMismatch
 --> <current file>:1:0
  |
1 | [ True ] # [ 1 ]
  | ^^^^^^^^^^^^^^^^ BinOpTypeMismatch
  |
